[package]
name = "olimex-stm32-p107"
description = "BSP crate for the Olimex STM32-P107 prototype board"
version = "0.1.0"
authors = ["Domenico Andreoli <domenico.andreoli@linux.com>"]
edition = "2018"
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"

[dependencies]
stm32f1xx-hal = { version = "0.7.0", features = ["rt", "stm32f107"] }

[dev-dependencies]
nb = "1.0.0"
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
rtt-target = { version = "0.1.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }

[profile]
[profile.dev]
debug = true
opt-level = 1
lto = true

[profile.release]
debug = true
opt-level = "s"
lto = true
